--- a/src/App/Components/Header/Header.css
+++ b/src/App/Components/Header/Header.css
@@ -16,20 +16,23 @@ html, body {
   width: 100%;
   height: 80px;
   display: flex;
-  background: #fafafa; /* Cor de fundo específica para .header */
+  background: #fafafa;
   align-items: center;
   justify-content: space-between;
 }
 
 .logo {
+  margin-left: 10px;
   width: 110px;
   cursor: pointer;
 }
 
 ul {
+  flex: 1; /* Ocupar o espaço disponível no centro */
   list-style: none;
   display: flex;
   gap: 20px;
+  justify-content: center; /* Centralizar os itens */
 }
 
 li a {
@@ -39,12 +42,14 @@ li a {
 }
 
 .Searchbox {
-  height: 10px;
   display: flex;
   align-items: center;
   padding: 10px 15px;
   border-radius: 10px;
-  background-color: #242424;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  margin-right: 20px;
+  height: 10px;
 }
 
 .Searchbox input {
@@ -58,7 +63,7 @@ li a {
 }
 
 .Searchbox input::placeholder {
-  color: #fff;
+  color: #000000;
   font-size: 15px;
 }
 
@@ -70,8 +75,9 @@ li a {
 .toggleTheme {
   width: 40px;
   cursor: pointer;
-  margin-right: 60px;
+  margin-right: 10px;
 }
+
 
 .dark .header {
   background-color: #242424;
