--- a/src/App/Components/Header/Header.css
+++ b/src/App/Components/Header/Header.css
@@ -1,106 +1,59 @@
 body {
   margin: 0;
-  background-color: #fafafa;
 }
 
-body.dark {
-  background-color: #242424;
-  color: #fff;
-}
-
-html, body {
+html,
+body {
   height: 100%;
 }
 
 .header {
   width: 100%;
-  height: 80px;
+  height: 89px;
   display: flex;
-  background: #fafafa;
-  align-items: center;
   justify-content: space-between;
+  background-color: black;
 }
 
 .logo {
-  margin-left: 10px;
-  width: 110px;
+  margin-top: 15px;
+  height: 70px;
+  margin-left: 20px; 
   cursor: pointer;
+}
+.menu {
+  width: 100px;
+  padding-right: 300px;
+  margin: 0px;
 }
 
 ul {
-  flex: 1; /* Ocupar o espaço disponível no centro */
+  align-items: center;
+  font-size: 20px;
   list-style: none;
   display: flex;
-  gap: 20px;
-  justify-content: center; /* Centralizar os itens */
+  gap: 20px; 
+  justify-content: center;
+  flex: 1;
 }
+
 
 li a {
   text-decoration: none;
-  color: black;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: rgb(255, 255, 255);
+  font-family: "poppins-bold", sans-serif !important;
 }
 
-.Searchbox {
-  display: flex;
-  align-items: center;
-  padding: 10px 15px;
-  border-radius: 10px;
-  background-color: #ffffff;
-  border: 1px solid #000000;
-  margin-right: 20px;
-  height: 10px;
-}
+@media (max-width: 768px) {
+  .header {
+    height: auto; /* Ajustando altura automaticamente para conteúdo responsivo */
+    flex-direction: column; /* Alterando para layout de coluna em telas menores */
+    align-items: center; /* Centralizar itens em telas menores */
+    padding: 10px; /* Adicionando espaçamento interno */
+  }
 
-.Searchbox input {
-  padding: 6px;
-  background-color: transparent;
-  border: none;
-  outline: none;
-  color: #fff;
-  font-size: 18px;
-  max-width: 200px;
-}
-
-.Searchbox input::placeholder {
-  color: #000000;
-  font-size: 15px;
-}
-
-.Searchbox img {
-  width: 20px;
-  cursor: pointer;
-}
-
-.toggleTheme {
-  width: 40px;
-  cursor: pointer;
-  margin-right: 10px;
-}
-
-
-.dark .header {
-  background-color: #242424;
-  color: #fff;
-}
-
-.dark .Searchbox {
-  background-color: #fff;
-}
-
-.dark .Searchbox input {
-  color: #242424;
-}
-
-.dark .Searchbox input::placeholder {
-  color: #242424;
-}
-
-.dark .menu li a {
-  color: #fff;
-}
-
-.dark .body {
-  background-color: #242424;
-  color: #fff;
+  .logo {
+    margin-left: 0; /* Removendo a margem esquerda em telas menores */
+    margin-top: 10px; /* Ajustando margem superior para distância entre logo e menu */
+  }
 }
