--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,6 @@
 .container{
   width: 100vw;
   min-height: 100vh;
-  background-color: #c0b8b8; 
+  background-color: #443a3a; 
   transition: 0.5s;
-}
-
-
-.container.dark{
-  background-color: rgb(29, 29, 29);
-  color: white;
 }
