--- a/src/App/Pages/LandingPage/LandingPage.css
+++ b/src/App/Pages/LandingPage/LandingPage.css
@@ -1,16 +1,16 @@
 .Intro {
   position: relative;
   width: 100%;
-}  
+}
 
 .image-container {
   position: relative;
-}  
+}
 
 .introLandingPageImage {
   width: 100%;
   display: block;
-}  
+}
 
 .TitleLandingPageIntro {
   font-size: 70px;
@@ -19,7 +19,7 @@
   left: 210px;
   padding: 20px;
   color: white;
-}  
+}
 
 .SubTitleLandingPageIntro1 {
   font-size: 25px;
@@ -30,7 +30,7 @@
   padding: 20px;
   color: white;
   background-color: rgba(0, 0, 0, 0.5);
-}  
+}
 .SubTitleLandingPageIntro2 {
   font-size: 25px;
   position: absolute;
@@ -38,7 +38,7 @@
   left: 375px;
   padding: 20px;
   color: rgb(255, 255, 255);
-}  
+}
 .SubTitleLandingPageIntro3 {
   font-size: 25px;
   position: absolute;
@@ -46,12 +46,12 @@
   left: 200px;
   padding: 20px;
   color: white;
-}  
+}
 .WhiskiesInfo {
   display: block;
   justify-content: center;
   align-items: center;
-}  
+}
 
 .WhiskiesBG {
   display: flex;
@@ -59,24 +59,82 @@
   justify-content: center;
   background-color: black;
   width: 100%;
-  height: 440px;
-  position: relative;
-}  
+  height: 380px;
+  position: relative; 
+}
 .jackDanielsImg {
-  position: absolute;
-  margin-left: 24px;
-  z-index: 2;
   height: 280px;
-}  
+  transition: transform 0.5s ease;
 
-.textJackDaniels {
+}
+.jackDanielsImg:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+}
+.DescJackDaniels {
+  color: white;
+  text-align: justify;
+  max-width: 800px; 
+  font-size: 30px;
+  margin-left: 20px; 
+}
+.RedLabelImg {
+  transition: transform 0.5s ease;
+  padding-left: 10px;
+  height: 280px;
+  width: 93.33px;
+}
+.RedLabelImg:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+}
+.DescRedLabel {
+  text-align: justify;
+  color: white;
+  max-width: 800px; 
+  font-size: 30px;
+  margin-left: 20px; 
+}
+.WoodfordReserveImg {
+  transition: transform 0.5s ease;
+  padding-left: 20px;
+  height: 240px;
+}
+.WoodfordReserveImg:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+}
+.DescWoodfordReserve {
+  color: white;
+  text-align: justify;
+  font-size: 30px;
+  max-width: 800px; 
+  margin-left: 20px; 
+}
+
+.OldParrImg {
+  padding-left: 25px;
+  transition: transform 0.5s ease;
+  height: 280px;
+}
+.OldParrImg:hover {
+  transform: scale(1.1);
+  transition: transform 0.5s ease;
+}
+.DescOldParr {
+  margin-left: 20px;
+  text-align: justify;
   color: white;
   font-size: 30px;
-  margin-left: 20px;
-}  
+  max-width: 800px; 
+}
+.image-container {
+  position: relative;
+  overflow: hidden;
+}
 
-.RedLabelImg {
-  height: 300px;
-  padding-left: 36px;
-}  
-
+.image {
+  width: 100%;
+  height: auto;
+  display: block;
+}
