--- a/src/App/Components/Footer/Footer.css
+++ b/src/App/Components/Footer/Footer.css
@@ -66,4 +66,18 @@
 }
 .githubIcon{
     padding-bottom: 10px;
+    cursor: pointer;
+    filter: brightness(0%);
+}
+.githubIcon:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
+}
+.linkedinIcon{
+    cursor: pointer;
+    filter: brightness(0%);
+}
+.linkedinIcon:hover{
+    transform: scale(1.1);
+    transition: transform 0.5s ease;
 }
