--- a/src/App/Pages/AboutPage/AboutPage.css
+++ b/src/App/Pages/AboutPage/AboutPage.css
@@ -1,106 +1,106 @@
 .centerItems{
-background-color: red;
-}
-.AboutPge {
-  position: relative;
-}
-
-.AboutBG {
-  width: 100%;
-  height: 100%;
-  display: block;
-}
-
-.Thanks {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 40px;
-  color: white;
-  position: absolute;
-  top: 50px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  margin-bottom: 0px;
-  margin-top: 0px;
-
-}
-.AboutProjectText {
-  margin-top: 0px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-size: 27px;
-  color: white;
-  position: absolute;
-  top: 150px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  width: 80%;
-}
-.sectionRedirect {
-  width: 1462.670px;
-  display: flex;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  gap : 210px; /* Espaçamento relativo */
-  max-width: 100%; /* Largura máxima relativa à tela */
-}
-
-.sectionRedirect p {
-  max-width: 100%; /* Largura máxima relativa à div pai */
-  white-space: nowrap; /* Impede que o texto quebre */
-  overflow: hidden; /* Esconde qualquer texto que extrapole o limite */
-}
-#specialLinkedinID{
-  margin-left: 80px;
-}
-.containerRedirectImages {
-  display: flex;
-  justify-content: center; /* Centraliza horizontalmente */
-  align-items: center; /* Centraliza verticalmente */
-  gap: 90px;
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.redirectVersa,
-.redirectGit,
-.redirectLinkedin {
-  display: flex;
-  flex-direction: column;
-  align-items: center; /* Centraliza os elementos filhos */
-}
-
-.textRedirectImages {
-  color: rgb(255, 255, 255);
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  font-style: italic;
-  font-size: 30px; /* Tamanho do texto */
-  margin-top: 10px; /* Espaçamento superior */
-  margin-left: 20px;
-}
-
-.redirectVersa {
-  left: 0; /* Alinha à esquerda */
-}
-
-.redirectGit {
-  left: 0; /* Alinha à esquerda */
-}
-
-.redirectLinkedin {
-  left: 0; /* Alinha à esquerda */
-}
-.PreviewsAbout {
-  cursor: pointer;
-  opacity: 90%;
-}
-.PreviewsAbout:hover {
-  opacity: 100%;
-}
+  background-color: red;
+  }
+  .AboutPge {
+    position: relative;
+  }
+  
+  .AboutBG {
+    width: 100%;
+    height: 100%;
+    display: block;
+  }
+  
+  .Thanks {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 40px;
+    color: white;
+    position: absolute;
+    top: 50px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin-bottom: 0px;
+    margin-top: 0px;
+  
+  }
+  .AboutProjectText {
+    margin-top: 0px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 27px;
+    color: white;
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    width: 80%;
+  }
+  .sectionRedirect {
+    width: 1462.670px;
+    display: flex;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap : 210px;
+    max-width: 100%;
+  }
+  
+  .sectionRedirect p {
+    max-width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  #specialLinkedinID{
+    margin-left: 80px;
+  }
+  .containerRedirectImages {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 90px;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  .redirectVersa,
+  .redirectGit,
+  .redirectLinkedin {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .textRedirectImages {
+    color: rgb(255, 255, 255);
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 30px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  
+  .redirectVersa {
+    left: 0;
+  }
+  
+  .redirectGit {
+    left: 0;
+  }
+  
+  .redirectLinkedin {
+    left: 0;
+  }
+  .PreviewsAbout {
+    cursor: pointer;
+    opacity: 90%;
+  }
+  .PreviewsAbout:hover {
+    opacity: 100%;
+  }  
