--- a/src/App/Components/BrandSection/Brands.css
+++ b/src/App/Components/BrandSection/Brands.css
@@ -1,14 +1,21 @@
 .BrandSection {
-  background-color: white;
+  background-color: rgb(0, 0, 0);
   padding: 20px;
   padding-bottom: 150px;
-  max-width: 1200px;
-  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
 }
-
+.brands{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 .titleBrandSection {
+  color: white;
   font-family: 'Cathiren', sans-serif;
-  font-size: 2rem; /* Responsivo ao tamanho da tela */
+  font-size: 2rem;
   text-align: center;
   margin-bottom: 20px;
 }
@@ -20,7 +27,8 @@
 }
 
 .imgBrandsArea {
-  height: auto; /* Ajusta a altura automaticamente */
-  max-width: 150px; /* Limita a largura máxima */
-  margin: 10px; /* Espaçamento entre as imagens */
+  filter: invert(100%);
+  height: auto;
+  max-width: 150px;
+  margin: 10px;
 }
